@@ -137,12 +137,12 @@ public class SlashingProtectionImporter {
     String validatorString = minimalSigningHistory.pubkey.toHexString().substring(2).toLowerCase();
 
     log.display("Importing " + validatorString);
-    Path outputFile = slashingProtectionPath.resolve(validatorString.concat(".yml"));
+    Path outputFile = slashingProtectionPath.resolve(validatorString + ".yml");
     Optional<ValidatorSigningRecord> existingRecord = Optional.empty();
     if (outputFile.toFile().exists()) {
-      try (InputStream input = Files.newInputStream(outputFile)) {
+      try {
         existingRecord =
-            Optional.ofNullable(ValidatorSigningRecord.fromBytes(Bytes.of(input.readAllBytes())));
+            Optional.ofNullable(ValidatorSigningRecord.fromBytes(Bytes.of(Files.readAllBytes(outputFile)));
       } catch (IOException e) {
         log.exit(1, "Failed to read existing file: " + outputFile.toString());
       }
